--- a/src/store.css
+++ b/src/store.css
@@ -1,4 +1,4 @@
-* {
+body {
   background: #f8f8f8;
 }
 
@@ -26,7 +26,6 @@ a {
 
 .shop-box-men, .shop-box-women, .shop-box-thrift {
   position: relative;
-  width: 100%
 }
 
 .store-image {
@@ -48,4 +47,20 @@ button {
 
 button:hover {
   cursor: pointer;
+}
+
+.footer-content {
+  grid-column: auto;
+}
+
+.footer-box1 {
+  grid-column: 1 3;
+}
+
+.footer-box2 {
+  grid-column: 4 6;
+}
+
+.footer-box3 {
+  grid-column: 7 9;
 }
