--- a/src/store.css
+++ b/src/store.css
@@ -1,22 +1,27 @@
 body {
-  background: #f8f8f8;
+	background: #f8f8f8;
 }
 
 a {
-  font-size: 32px;
-  color: grey;
+	font-size: 32px;
+	color: grey;
 }
 
 img {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 .logo-container {
-  display: flex;
-  justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 .logo-image {
-  height: 300px;
-  width: auto;
+	height: 300px;
+	width: auto;
+}
+
+.nav {
+	color: pink;
+	border-bottom: 1px solid grey;
 }
